# Anilist-Link

./: .dockerignore  .env.example  .gitignore  Anilist-Link-ProjectOverview.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: CI.yml
docs/: ARCHITECTURE.md  CLAUDE.md  DEV-SETUP.md  PROJECT-STRUCTURE.md  QUICK-REFERENCE.md
scripts/: Setup.sh  reset_for_testing.py  test_connector_integration.py  test_series_groups.py  test_tvmaze_matching.py
scripts/dev-tools/: check_jellyfin_webhooks.py  clear-plex-jellyfin.sh  clear-sonarr-radarr.sh  delete-virtual-items.sh  entrypoint.sh  reset-arr-data.sh  reset-for-testing.sh  reset-media-and-onboarding.sh  reset-media.sh  test_jellyfin_websocket.py
src/: Main.py
src/Clients/: AnilistClient.py  CrunchyrollClient.py  JellyfinClient.py  JellyfinEventListener.py  PlexClient.py  ProwlarrClient.py  QBittorrentClient.py  RadarrClient.py  ServarrBaseClient.py  SonarrClient.py  TVMazeClient.py
src/Database/: Connection.py  Migrations.py  Models.py
src/Download/: ArrPostProcessor.py  DownloadManager.py  MappingResolver.py
src/Matching/: Normalizer.py  TitleMatcher.py
src/Scanner/: JellyfinMetadataScanner.py  JellyfinShowProvider.py  LibraryRestructurer.py  LibraryScanner.py  LocalDirectoryScanner.py  MetadataScanner.py  PlexShowProvider.py  SeriesGroupBuilder.py
src/Scheduler/: Jobs.py
src/Sync/: CrunchyrollPreviewRunner.py  DownloadSyncer.py  JellyfinWatchSyncer.py  PlexWatchSyncer.py  WatchSyncBase.py  WatchSyncer.py  WatchlistRefresh.py
src/Utils/: Config.py  Logging.py  NamingTemplate.py  NamingTranslator.py  PathTranslator.py
src/Web/: ActivityTracker.py  App.py
src/Web/Routes/: ArrWebhook.py  Auth.py  ConnectionTest.py  CrunchyrollSync.py  Dashboard.py  Downloads.py  Helpers.py  JellyfinLibrary.py  JellyfinScan.py  JellyfinWebhook.py  Library.py  ManualGrab.py  Mappings.py  Onboarding.py  PlexLibrary.py  PlexScan.py  Restructure.py  Settings.py  SonarrSync.py  Tools.py  UnifiedLibrary.py  WatchSync.py  WatchlistLibrary.py
src/Web/Static/: directory-picker.js  file-browser.js  media-detail.js  naming-templates.js  style.css
src/Web/Templates/: _media_card.html  base.html  crunchyroll.html  crunchyroll_history.html  crunchyroll_preview.html  dashboard.html  download_manager.html  jellyfin_library.html  jellyfin_scan.html  library_detail.html  library_scan_progress.html  library_scan_results.html  macros.html  manual_grab.html  mappings.html  onboarding.html  plex_library.html  restructure_plan_detail.html  restructure_preview.html  tools.html  (+10 more)
tests/: conftest.py
tests/Integration/: TestApiClients.py  TestScannerPipeline.py
tests/Unit/: TestAnilistClient.py  TestTitleMatcher.py  TestWatchSyncer.py  test_activity_tracker.py  test_arr_post_processor.py  test_config.py  test_database.py  test_naming_template.py  test_normalizer.py  test_plex_client.py  test_prowlarr_client.py  test_rate_limiter.py  test_series_group_builder.py  test_title_matcher.py
